overlay bug, addon section caused overflow-x

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -36,7 +36,6 @@ App {
 
 html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
   }
   
 /* width */
